--- a/react-app/my-app/src/App.css
+++ b/react-app/my-app/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #5EA1EF;
+  background-color: #19A6F6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,7 +26,7 @@
 }
 
 .App-link {
-  color: #5EA1EF;
+  color: #61dafb;
 }
 
 
