--- a/react-app/my-app/src/App.css
+++ b/react-app/my-app/src/App.css
@@ -1,6 +1,7 @@
 
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -10,19 +11,20 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 50s linear;
   }
 }
 
 .App-header {
   background-color: #19A6F6;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 20px;
 }
 
 .App-link {
