added some headers

--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -82,3 +82,14 @@ textAlign: center;
     font-size: calc(10px + 2vmin);
     color: white;
 }
+
+.shop{
+  background-color: #1194DE;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
