--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -84,7 +84,7 @@ textAlign: center;
 }
 
 .shop{
-  background-color: #1194DE;
+  background-color: #FCC400;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
