--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -94,7 +94,9 @@ textAlign: center;
     color: white;
 }
 
-.button {
+.button-style {
   border: none;
   padding: 20px;
+  display: inline-block;
+  text-align: center;
 }
