--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -99,4 +99,7 @@ textAlign: center;
   padding: 10px;
   display: inline-block;
   text-align: center;
+  cursor:pointer;
+   outline:none;
+   color: white;
 }
