cleaned up home page a little

--- a/react-app/my-app/src/App.css
+++ b/react-app/my-app/src/App.css
@@ -117,6 +117,14 @@
    animation-timing-function: ease-in-out;
 }
 
+.image-style6{
+  animation-name: floating;
+   animation-duration: 3s;
+   animation-iteration-count: infinite;
+   animation-timing-function: ease-in-out;
+   display: inline-block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
