--- a/react-app/my-app/src/App.css
+++ b/react-app/my-app/src/App.css
@@ -114,7 +114,7 @@
 
 .image-style4{
   box-shadow: 20px 15px 50px .05px #DD4C13;
-  animation-name: floating;
+  animation-name: floating2;
    animation-duration: 5s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
@@ -129,6 +129,15 @@
 }
 
 .image-style6{
+  animation-name: floating;
+   animation-duration: 3s;
+   animation-iteration-count: infinite;
+   animation-timing-function: ease-in-out;
+   display: inline-block;
+}
+
+.image-style7{
+  box-shadow: 20px 15px 50px .05px #E3DB0C;
   animation-name: floating;
    animation-duration: 3s;
    animation-iteration-count: infinite;
@@ -168,3 +177,8 @@
           50%  { transform: translate(0, 11px); }
           100%   { transform: translate(0, -0px); }
       }
+@keyframes floating2 {
+                0% { transform: translate(0,  0px); }
+                50%  { transform: translate(0, 20px); }
+                100%   { transform: translate(0, -5px); }
+            }
