more slight changes

--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -73,7 +73,7 @@ textAlign: center;
 }
 
 .con{
-  background-color: #F06292;
+  background-color: #F7577E;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
