added more to contact page

--- a/react-app/my-app/src/App.css
+++ b/react-app/my-app/src/App.css
@@ -61,7 +61,7 @@
 .h1{
   font: normal small-caps normal bold 64px/1.4 Georgia;
   font-style: oblique 23deg;
-
+color: white;
     text-decoration-color: white;
 
 }
