--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -81,7 +81,8 @@ textAlign: center;
   text-align: center;
 
     font-size: calc(10px + 2vmin);
-
+    font: normal small-caps normal bold 48px/1.4 Georgia;
+    font-style: oblique 23deg;
 }
 
 .shop{
@@ -136,4 +137,21 @@ textAlign: center;
  background-repeat:no-repeat;
  border: none;
  color: white;
+}
+.subscribe-container {
+  background: light-grey;
+  box-shadow: 0 10px 25px 0 rgba(210, 214, 220, 0.3);
+  display: flex;
+  flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
+  font-size: 24px;
+  line-height: 3.5;
+  margin-bottom: 1rem;
+  max-width: 800px;
+  padding: 4.25rem 1rem;
+  width: 120%;
+  text-align: center;
+
+
 }
