--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -145,13 +145,18 @@ textAlign: center;
   flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
-  font-size: 24px;
-  line-height: 3.5;
-  margin-bottom: 1rem;
-  max-width: 800px;
-  padding: 4.25rem 1rem;
-  width: 120%;
+  font-size: 32px;
+  line-height: 3.25;
+  margin-bottom: .75rem;
+  max-width: 1400px;
+  justify-content: center;
+  width: 140%;
   text-align: center;
+  box-shadow: 20px 15px 50px .05px rgba(210, 214, 220, 0.75);
+  animation-name: floating;
+   animation-duration: 3s;
+   animation-iteration-count: infinite;
+   animation-timing-function: ease-in-out;
 
 
 }
