--- a/react-app/my-app/src/index.css
+++ b/react-app/my-app/src/index.css
@@ -139,24 +139,28 @@ textAlign: center;
  color: white;
 }
 .subscribe-container {
-  background: light-grey;
-  box-shadow: 0 10px 25px 0 rgba(210, 214, 220, 0.3);
+  background: #152532;
   display: flex;
   flex-direction: column;
+  border-radius: 25px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
   font-size: 28px;
   line-height: 3.25;
   margin-bottom: .75rem;
-  max-width: 1400px;
+  max-width: 1100px;
   justify-content: center;
-  width: 140%;
+  width: 200%;
   text-align: center;
   box-shadow: 20px 15px 50px .05px rgba(210, 214, 220, 0.75);
   animation-name: floating;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
-
+   font: normal small-caps normal 36px/1.4 Georgia;
+   font-style: oblique 2deg;
+   margin-right: 10rem;
+   margin-left: 9rem;
+ color: white;
 
 }
